# montemp

./: README.md
driver/: Makefile  file_utils.c  main.c  montemp.h  stats.c  thermal_hwmon.c
monitor/: Cargo.toml
monitor/src/: app.rs  chart.rs  data.rs  draw.rs  main.rs  sensor.rs  utils.rs
