[package]
name = "mtread"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cursive = "0.21.1"
ratatui = "0.29.0"
crossterm = "0.28.1"
chrono = "0.4"

[profile.dev]
opt-level = 1 
incremental = true
[profile.release]
opt-level = 3
lto = true
codegen-units = 1